book-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.network/estudo-network: "true"
    io.kompose.service: book-db
  name: book-db
spec:
  containers:
    - args:
        - --default-authentication-plugin=mysql_native_password
      image: mysql:5.7.22
      name: book-db
      ports:
        - containerPort: 3310
      resources:
        limits:
          cpu: 500m
          memory: "524288e3"
        requests:
          cpu: 250m
          memory: "209715200"
  restartPolicy: OnFailure
status: {}
