naming-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.network/estudo-network: "true"
    io.kompose.service: naming-server
  name: naming-server
spec:
  containers:
    - image: tiagobarbano/naming-server:0.0.1-SNAPSHOT
      name: naming-server
      ports:
        - containerPort: 8761
      resources:
        limits:
          cpu: 750m
          memory: "838860800"
        requests:
          cpu: 500m
          memory: "419430400"
  restartPolicy: OnFailure
status: {}
