apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: apigateway
  name: apigateway
spec:
  ports:
    - name: "8765"
      port: 8765
      targetPort: 8765
  selector:
    io.kompose.service: apigateway
status:
  loadBalancer: {}
