estudo-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: estudo-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/estudo-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/estudo-network: "true"
